--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@naszos/game-utils": "^0.1.1",
     "pinia": "^2.2.2",
+    "sass-embedded": "^1.77.8",
     "vue": "3.4.38"
   },
   "devDependencies": {
